<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.shininet.bukkit</groupId>
    <artifactId>PlayerHeads</artifactId>
    <packaging>pom</packaging>
    <version>5.21.4-SNAPSHOT</version>
    <name>PlayerHeads-5.2</name>
    
    <!-- sub modules -->
    <modules>
        <module>PlayerHeads-base-api</module>
        <module>PlayerHeads-compatibility</module>
        <module>PlayerHeads-api</module>
        <module>PlayerHeads-core</module>
        <module>PlayerHeads-crossversion-plugin</module>
    </modules>
    

    <organization>
        <name>ShiniNet</name>
        <url>http://www.shininet.org</url>
    </organization>
    
    <licenses>
        <license>
            <name>Mozilla Public License 2.0</name>
            <url>http://mozilla.org/MPL/2.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <scm>
        <developerConnection>scm:git:git@github.com:crashdemons/PlayerHeads.git</developerConnection>
        <connection>scm:git:git://github.com/crashdemons/PlayerHeads.git</connection>
        <url>https://github.com/crashdemons/PlayerHeads/tree/master/</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/crashdemons/PlayerHeads/issues</url>
    </issueManagement>

 <!-- -->
    <repositories>
	    <repository>
            <id>mojang</id>
            <name>Mojang's Repository</name>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>md_5-releases</id>
            <url>https://repo.md-5.net/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>spigot-group-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations-java5</artifactId>
          <version>15.0</version>
        </dependency>
  	<dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <type>jar</type>
            <scope>test</scope>
  	</dependency>
  	<dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>2.0.9</version>
            <type>jar</type>
            <scope>test</scope>
  	</dependency>
  	<dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>2.0.9</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.12.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito-common</artifactId>     
            <version>1.7.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <!-- fix errors when using pockermock under JDK 17 -->
                  <argLine>-Dfile.encoding=UTF8 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <!--<useIncrementalCompilation>true</useIncrementalCompilation>-->
                    <excludes>
                        <exclude>**/package-info.java</exclude>
                    </excludes>
                    <testExcludes>
                        <exclude>**/package-info.java</exclude>
                    </testExcludes>
                    <!--<compilerArgs><arg>-Xlint:all</arg></compilerArgs>-->
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Built-By>Maven</Built-By>
                            <Implementation-Title>${project.name}</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
                            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>

    </build>
    <!--    -->
</project>
